@@ -1,3 +1,7 @@
+
++ added missing css for QPH at statusbar (daburna)
++ added bookmark icon (daburna)
+
 v 0.2.3 - 23.01.2008
 =====================================================================
 + added entitys (daburna)
